Update tests to JDK 21